[package]
name = "easy_time"
version = "0.1.4"
edition = "2021"
authors = ["Mohamad Al zohbie <alzoubi528@gmail.com>"]

description= "package for handling time in rust more easily"
repository = "https://github.com/mohamadzoh/easy_time"
readme = "README.md"
keywords = ["time", "date", "datetime", "easy","chrono"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
